--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-animated-cursor": "^2.5.1",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.4.0",
     "react-multi-carousel": "^2.8.2",
     "react-router-dom": "^6.3.0",
