--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-multi-carousel": "^2.8.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
