--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "react-animated-cursor": "^2.5.1",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
     "react-multi-carousel": "^2.8.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.0.7",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.0.7",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
