--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^0.27.2",
     "daisyui": "^2.20.0",
     "firebase": "^9.9.1",
     "react": "^18.2.0",
