--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.9.1",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.5.1",
+    "react-countup": "^6.3.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-helmet": "^6.1.0",
