--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.27.2",
     "daisyui": "^2.20.0",
     "firebase": "^9.9.1",
+    "google-map-react": "^2.2.0",
+    "leaflet": "^1.8.0",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.5.1",
     "react-dom": "^18.2.0",
@@ -20,6 +22,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
+    "react-leaflet": "^4.0.1",
     "react-messenger-customer-chat": "^0.8.0",
     "react-multi-carousel": "^2.8.2",
     "react-router-dom": "^6.3.0",
