--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.9.1",
     "google-map-react": "^2.2.0",
     "leaflet": "^1.8.0",
+    "pdfjs-dist": "^2.14.305",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.5.1",
     "react-component-export-image": "^1.0.6",
