--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "react-leaflet": "^4.0.1",
     "react-messenger-customer-chat": "^0.8.0",
     "react-multi-carousel": "^2.8.2",
+    "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.7",
     "save-html-as-image": "^1.7.1",
     "slick-carousel": "^1.8.1",
+    "video-react": "^0.15.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
