--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-slick": "^0.29.0",
     "react-star-ratings": "^2.3.0",
     "react-toastify": "^9.0.7",
+    "react-typing-game-hook": "^1.3.4",
     "save-html-as-image": "^1.7.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
