--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pdfjs-dist": "^2.14.305",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.5.1",
+    "react-calendar": "^3.7.0",
     "react-component-export-image": "^1.0.6",
     "react-countup": "^6.3.0",
     "react-dom": "^18.2.0",
