--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-leaflet": "^4.0.1",
     "react-messenger-customer-chat": "^0.8.0",
     "react-multi-carousel": "^2.8.2",
-    "react-query": "^4.0.0",
+    "react-query": "^4.0.0-beta.17",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
