--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-animated-cursor": "^2.5.1",
     "react-calendar": "^3.7.0",
+    "react-chessboard": "^1.3.0",
     "react-component-export-image": "^1.0.6",
     "react-countup": "^6.3.0",
     "react-dom": "^18.2.0",
