--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "daisyui": "^2.20.0",
     "firebase": "^9.9.1",
     "google-map-react": "^2.2.0",
+    "javascript-time-ago": "^2.5.7",
     "leaflet": "^1.8.0",
     "pdfjs-dist": "^2.14.305",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.5.1",
+    "react-canvas-draw": "^1.2.1",
     "react-component-export-image": "^1.0.6",
     "react-countup": "^6.3.0",
     "react-dom": "^18.2.0",
@@ -25,20 +27,20 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
+    "react-is": "^18.2.0",
     "react-leaflet": "^4.0.1",
     "react-messenger-customer-chat": "^0.8.0",
     "react-multi-carousel": "^2.8.2",
-<<<<<<< HEAD
-    "react-query": "^4.0.0-beta.17",
-=======
     "react-player": "^2.10.1",
-    "react-query": "^4.0.0",
->>>>>>> a657672d9c6879e255923ae89ac3d8a5fc97d571
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-speech-kit": "^3.0.1",
+    "react-speech-recognition": "^3.9.1",
     "react-star-ratings": "^2.3.0",
-    "react-toastify": "^9.0.7",
+    "react-time-ago": "^7.2.1",
+    "react-toastify": "^9.0.8",
     "react-typing-game-hook": "^1.3.4",
     "save-html-as-image": "^1.7.1",
     "slick-carousel": "^1.8.1",
