--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "@fontsource/nunito": "^4.5.9",
+    "@leenguyen/react-flip-clock-countdown": "^1.3.1",
     "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -35,7 +36,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-star-ratings": "^2.3.0",
-    "react-toastify": "^9.0.7",
+    "react-toastify": "^9.0.8",
     "react-typing-game-hook": "^1.3.4",
     "save-html-as-image": "^1.7.1",
     "slick-carousel": "^1.8.1",
