--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "daisyui": "^2.20.0",
     "firebase": "^9.9.1",
     "google-map-react": "^2.2.0",
+    "javascript-time-ago": "^2.5.7",
     "leaflet": "^1.8.0",
     "pdfjs-dist": "^2.14.305",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.5.1",
     "react-calendar": "^3.7.0",
+    "react-canvas-draw": "^1.2.1",
     "react-component-export-image": "^1.0.6",
     "react-countup": "^6.3.0",
     "react-dom": "^18.2.0",
@@ -31,6 +33,7 @@
     "react-multi-carousel": "^2.8.2",
     "react-player": "^2.10.1",
     "react-query": "^4.0.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
