--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-speech-kit": "^3.0.1",
+    "react-speech-recognition": "^3.9.1",
     "react-star-ratings": "^2.3.0",
     "react-toastify": "^9.0.8",
     "react-typing-game-hook": "^1.3.4",
