--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "react": "^18.2.0",
     "react-animated-cursor": "^2.5.1",
     "react-calendar": "^3.7.0",
-    "react-chessboard": "^1.3.0",
     "react-canvas-draw": "^1.2.1",
+    "react-chessboard": "^1.3.0",
     "react-component-export-image": "^1.0.6",
     "react-countup": "^6.3.0",
     "react-dom": "^18.2.0",
@@ -36,6 +36,7 @@
     "react-player": "^2.10.1",
     "react-query": "^4.0.0",
     "react-quill": "^2.0.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
