--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-time-ago": "^7.2.1",
     "react-toastify": "^9.0.8",
     "react-typing-game-hook": "^1.3.4",
+    "redux": "^4.2.0",
     "save-html-as-image": "^1.7.1",
     "slick-carousel": "^1.8.1",
     "video-react": "^0.15.0",
