--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "react-toastify": "^9.0.8",
     "react-typing-game-hook": "^1.3.4",
     "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "save-html-as-image": "^1.7.1",
     "slick-carousel": "^1.8.1",
     "video-react": "^0.15.0",
